[gd_scene load_steps=19 format=3 uid="uid://cglna433cd3s0"]

[ext_resource type="Theme" uid="uid://b5lu2qaepac7c" path="res://Assets/Theme/main_theme.tres" id="1_j0bkq"]
[ext_resource type="Script" path="res://Scripts/MultiplayerLobby/Multiplayer_Lobby.gd" id="1_qmw6p"]
[ext_resource type="PackedScene" uid="uid://cndhnvf80jorl" path="res://Scenes/Networking/room_code_display.tscn" id="2_tikey"]
[ext_resource type="Texture2D" path="res://Assets/lobby_background.png.png" id="2_x5yg7"]
[ext_resource type="PackedScene" path="res://Scenes/MultiplayerLobby/Local_Server_Broadcast.tscn" id="3_lhou2"]
[ext_resource type="Texture2D" uid="uid://driwuu6g75qd4" path="res://Assets/image_2024-03-04_204227406.png" id="3_m3rc6"]
[ext_resource type="Texture2D" uid="uid://dew5l8awi5xbo" path="res://Assets/buttons/leave_button/leave_button_neutral.png" id="4_lgkif"]
[ext_resource type="Texture2D" uid="uid://cyoqdn3c4cegn" path="res://Assets/buttons/start_button/start_button_neutral.png" id="4_x1nu6"]
[ext_resource type="Texture2D" uid="uid://f5gkpv1d6w4y" path="res://Assets/buttons/start_button/start_button_pressed.png" id="5_6jj2c"]
[ext_resource type="Texture2D" uid="uid://evq4b1kidv3b" path="res://Assets/buttons/leave_button/leave_button_pressed.png" id="5_nx7ek"]
[ext_resource type="Texture2D" uid="uid://0xv06pv6kse5" path="res://Assets/buttons/leave_button/leave_button_hovered.png" id="6_mwdhw"]
[ext_resource type="Texture2D" uid="uid://d1liyt46pa1e3" path="res://Assets/buttons/start_button/start_button_hover.png" id="6_vjdtp"]
[ext_resource type="PackedScene" uid="uid://igx155esedds" path="res://Scenes/Networking/network_var_sync.tscn" id="8_hdkqu"]
[ext_resource type="Texture2D" path="res://Assets/fire_knight/NoSelected.png" id="9_c3mch"]
[ext_resource type="Script" path="res://Scripts/MultiplayerLobby/lobby_player.gd" id="10_5pjfl"]
[ext_resource type="Texture2D" uid="uid://d078n5txibdy6" path="res://Assets/buttons/Player_Selected_outline.png" id="10_freon"]
[ext_resource type="Texture2D" path="res://Assets/fire_knight/FireKnightSelection.png" id="13_jepoh"]
[ext_resource type="Script" path="res://Scenes/MultiplayerLobby/CharacterSelecter.gd" id="14_4b6a1"]

[node name="MultiplayerLobby" type="Control" node_paths=PackedStringArray("start_game_button", "local_broadcast", "player_1", "player_2")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_j0bkq")
script = ExtResource("1_qmw6p")
start_game_button = NodePath("StartButton")
local_broadcast = NodePath("LocalBroadcast")
player_1 = NodePath("Player1")
player_2 = NodePath("Player2")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_m3rc6")
expand_mode = 1

[node name="Bakcground" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x5yg7")

[node name="RoomCodeDisplay" parent="." instance=ExtResource("2_tikey")]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -415.0
offset_top = -339.0
offset_right = -15.0
offset_bottom = -269.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]ROOM CODE : "

[node name="LocalBroadcast" parent="." instance=ExtResource("3_lhou2")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -374.0
offset_top = 5.0
offset_right = -7.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0

[node name="LeaveButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -391.0
offset_top = -153.0
offset_right = -211.0
offset_bottom = -89.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
focus_neighbor_top = NodePath("../StartButton")
texture_normal = ExtResource("4_lgkif")
texture_pressed = ExtResource("5_nx7ek")
texture_hover = ExtResource("6_mwdhw")
texture_disabled = ExtResource("5_nx7ek")

[node name="Player1" type="Control" parent="." node_paths=PackedStringArray("name_line_edit", "alphabet_grid", "disconnect_button", "type_here_label", "outline", "selected_button")]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_5pjfl")
name_line_edit = NodePath("LineEdit")
alphabet_grid = NodePath("Keyboard")
disconnect_button = NodePath("Keyboard/Disconnect_Button")
type_here_label = NodePath("TypeHere")
p1_or_p2 = 1
player_colour = Color(0.141176, 0.372549, 0.972549, 1)
outline = NodePath("Keyboard/A/Outline")
selected_button = NodePath("Keyboard/A")

[node name="SelectedCharacter" type="TextureRect" parent="Player1"]
layout_mode = 0
offset_left = 510.0
offset_right = 551.0
offset_bottom = 59.0
scale = Vector2(5, 5)
texture = ExtResource("9_c3mch")

[node name="LineEdit" type="LineEdit" parent="Player1"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 31.0
scale = Vector2(2, 2)

[node name="Keyboard" type="FlowContainer" parent="Player1"]
layout_mode = 0
offset_left = 4.0
offset_top = 112.0
offset_right = 562.0
offset_bottom = 892.0
scale = Vector2(0.9, 0.9)

[node name="A" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "A"

[node name="Outline" type="NinePatchRect" parent="Player1/Keyboard/A"]
layout_mode = 2
offset_right = 30.0
offset_bottom = 31.0
texture = ExtResource("10_freon")
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14

[node name="B" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "B"

[node name="C" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "C"

[node name="D" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "D"

[node name="E" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "E"

[node name="F" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "F"

[node name="G" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "G"

[node name="H" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "H"

[node name="I" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "I"

[node name="J" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "J"

[node name="K" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "K"

[node name="L" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "L"

[node name="M" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "M"

[node name="N" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "N"

[node name="O" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "O"

[node name="P" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "P"

[node name="Q" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Q"

[node name="R" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "R"

[node name="S" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "S"

[node name="T" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "T"

[node name="U" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "U"

[node name="V" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "V"

[node name="W" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "W"

[node name="X" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../../../Character_Select/fire_knight")
focus_next = NodePath("../../../Character_Select/fire_knight")
theme_override_font_sizes/font_size = 50
text = "X"

[node name="Y" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Y"

[node name="Z" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Z"

[node name="BACK" type="Button" parent="Player1/Keyboard"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../../../Character_Select/fire_knight")
theme_override_font_sizes/font_size = 50
text = "BACK"

[node name="Disconnect_Button" type="Button" parent="Player1/Keyboard"]
layout_mode = 2
focus_neighbor_right = NodePath("../../../Character_Select/fire_knight")
theme_override_font_sizes/font_size = 50
text = "DISCONNECT"

[node name="NetworkVarSync" parent="Player1" instance=ExtResource("8_hdkqu")]
instance_file_path = "res://Scenes/MultiplayerLobby/Lobby_Player.tscn"
reliable_sync_vars = {
NodePath("../LineEdit"): ["text"],
NodePath(".."): ["global_position", "lobby_grid_pos", "selected_character"]
}
is_local_authority = true

[node name="TypeHere" type="RichTextLabel" parent="Player1"]
layout_mode = 0
offset_left = 1.0
offset_top = 63.0
offset_right = 69.0
offset_bottom = 103.0
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Player2" type="Control" parent="." node_paths=PackedStringArray("name_line_edit", "alphabet_grid", "disconnect_button", "type_here_label", "outline", "selected_button")]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_5pjfl")
name_line_edit = NodePath("LineEdit")
alphabet_grid = NodePath("Keyboard")
disconnect_button = NodePath("Keyboard/Disconnect_Button")
type_here_label = NodePath("TypeHere")
p1_or_p2 = 2
player_colour = Color(0.988235, 0.117647, 0, 1)
outline = NodePath("Keyboard/A/Outline")
selected_button = NodePath("Keyboard/A")

[node name="SelectedCharacter" type="TextureRect" parent="Player2"]
layout_mode = 0
offset_left = 1176.0
offset_top = 3.0
offset_right = 1217.0
offset_bottom = 62.0
scale = Vector2(5, 5)
texture = ExtResource("9_c3mch")

[node name="LineEdit" type="LineEdit" parent="Player2"]
layout_mode = 0
offset_left = 1416.0
offset_top = 3.0
offset_right = 1666.0
offset_bottom = 34.0
scale = Vector2(2, 2)

[node name="Keyboard" type="FlowContainer" parent="Player2"]
layout_mode = 0
offset_left = 1420.0
offset_top = 112.0
offset_right = 1976.0
offset_bottom = 892.0
scale = Vector2(0.9, 0.9)

[node name="A" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "A"

[node name="Outline" type="NinePatchRect" parent="Player2/Keyboard/A"]
layout_mode = 2
offset_right = 30.0
offset_bottom = 31.0
texture = ExtResource("10_freon")
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14

[node name="B" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "B"

[node name="C" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "C"

[node name="D" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "D"

[node name="E" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "E"

[node name="F" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "F"

[node name="G" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "G"

[node name="H" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "H"

[node name="I" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "I"

[node name="J" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "J"

[node name="K" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "K"

[node name="L" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "L"

[node name="M" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "M"

[node name="N" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "N"

[node name="O" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "O"

[node name="P" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "P"

[node name="Q" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Q"

[node name="R" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "R"

[node name="S" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "S"

[node name="T" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "T"

[node name="U" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "U"

[node name="V" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "V"

[node name="W" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "W"

[node name="X" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "X"

[node name="Y" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Y"

[node name="Z" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Z"

[node name="BACK" type="Button" parent="Player2/Keyboard"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "BACK"

[node name="Disconnect_Button" type="Button" parent="Player2/Keyboard"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../../StartButton")
theme_override_font_sizes/font_size = 50
text = "DISCONNECT"

[node name="NetworkVarSync" parent="Player2" instance=ExtResource("8_hdkqu")]
position = Vector2(1416, 3)
instance_file_path = "res://Scenes/MultiplayerLobby/Lobby_Player.tscn"
reliable_sync_vars = {
NodePath("../LineEdit"): ["text"],
NodePath(".."): ["global_position", "lobby_grid_pos", "selected_character"]
}
is_local_authority = true

[node name="TypeHere" type="RichTextLabel" parent="Player2"]
layout_mode = 0
offset_left = 1417.0
offset_top = 66.0
offset_right = 1514.0
offset_bottom = 106.0
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="NetworkVarSync" parent="." instance=ExtResource("8_hdkqu")]
reliable_sync_vars = {
NodePath(".."): ["puppet_master_sync_id_1", "puppet_master_sync_id_2"]
}

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -394.0
offset_top = -266.0
offset_right = -214.0
offset_bottom = -202.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
focus_neighbor_top = NodePath("../Player2/Keyboard/Disconnect_Button")
focus_neighbor_bottom = NodePath("../LeaveButton")
texture_normal = ExtResource("4_x1nu6")
texture_pressed = ExtResource("5_6jj2c")
texture_hover = ExtResource("6_vjdtp")

[node name="Character_Select" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("14_4b6a1")

[node name="fire_knight" type="TextureButton" parent="Character_Select"]
layout_mode = 0
offset_left = 836.0
offset_top = 580.0
offset_right = 877.0
offset_bottom = 639.0
scale = Vector2(5, 5)
texture_normal = ExtResource("13_jepoh")

[connection signal="button_down" from="LeaveButton" to="." method="_on_leave_button_button_down"]
[connection signal="text_changed" from="Player1/LineEdit" to="Player1" method="_on_line_edit_text_changed"]
[connection signal="button_down" from="Player1/Keyboard/Disconnect_Button" to="Player1" method="_on_disconnect_button_button_down"]
[connection signal="text_changed" from="Player2/LineEdit" to="Player2" method="_on_line_edit_text_changed"]
[connection signal="button_down" from="Player2/Keyboard/Disconnect_Button" to="Player2" method="_on_disconnect_button_button_down"]
[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="Character_Select/fire_knight" to="Character_Select" method="_on_fire_knight_select_button_down"]
